# AmigaEmu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CuteAmiga/: ALSoundMixer.cpp  AmigaCute.cpp  AmigaEmulation.cpp  AmigaEmulation.h  BitplaneDialog.cpp  BitplaneDialog.h  BitplaneDialog.ui  Breakpoint.cpp  Breakpoint.h  CMakeLists.txt  CopperDialog.cpp  CopperDialog.h  CopperDialog.ui  DebugDialog.cpp  DebugDialog.h  DebugDialog.ui  DiskDialog.cpp  DiskDialog.h  DiskDialog.ui  Display.cpp  Display.h  ExecDialog.cpp  ExecDialog.h  ExecDialog.ui  FunctionHelper.cpp  FunctionHelper.h  HardwareInterface.cpp  HardwareInterface.h  IDragNDropTarget.h  ISound.h  MainWindow.cpp  MainWindow.h  MemoryDialog.cpp  MemoryDialog.h  MemoryDialog.ui  StatusBarAmiga.h  mainwindow.ui  resources.qrc
Notes/: BattleSquadron.asm  CIA 8520.txt  DMA.txt  Dasm kickstart 1.2.txt  Kickstart 1.2.asm  RSI_Megademo.asm  Structures.txt  Wb13_1.adf  checksum_wb13.txt  checksum_wb13_cpu.txt  checksum_wb13_t0_s6.txt  copper_log_ko.txt  copper_log_ok.txt  disk.resource_disassembly.txt  kickstart drawing.txt  kickstart.txt
Notes/DiagROM/: Readme.txt  RomStartup.txt
Sources/: AMAbsolute.cpp  AMAbsolute.h  AMAddress.cpp  AMAddress.h  AMAddressDisplacement.cpp  AMAddressDisplacement.h  AMAddressIndex.cpp  AMAddressIndex.h  AMImmediate.cpp  AMImmediate.h  AMPc.cpp  AMPc.h  AMRegister.cpp  AMRegister.h  AddressingMode.cpp  AddressingMode.h  AddressingModeFactory.cpp  AddressingModeFactory.h  Agnus.cpp  Agnus.h  Bitplanes.cpp  Bitplanes.h  Blitter.cpp  Blitter.h  Bus.cpp  Bus.h  CIA8520.cpp  CIA8520.h  CMakeLists.txt  Copper.cpp  Copper.h  DMAControl.cpp  DMAControl.h  Denise.cpp  Denise.h  Disassembler68k.cpp  Disassembler68k.h  Disk.cpp  Disk.h  DiskController.cpp  (+23 more)
Tests/: CMakeLists.txt  TestEngineCpu.cpp  TestEngineCpu.h  test.cpp  test_68k.cpp  test_add.cpp  test_addressing_modes.cpp  test_bus.cpp  test_cmp.cpp  test_lea.cpp  test_move.cpp
